secondfile/objects/EC_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_SP__c</fullName>
        <label>Assigned SP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Called__c</fullName>
        <label>Date Called</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Lead_Handed_Off__c</fullName>
        <label>Date Lead Handed Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Lead_Received__c</fullName>
        <label>Date Lead Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <label>Do Not Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EC Lead</label>
        <referenceTo>EC_Lead__c</referenceTo>
        <relationshipLabel>EC Contacts</relationshipLabel>
        <relationshipName>EC_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Comments__c</fullName>
        <label>Sales Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Disposition__c</fullName>
        <label>Sales Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telemarketer_Comment__c</fullName>
        <label>Telemarketer Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telemarketer_Position__c</fullName>
        <label>Telemarketer Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>EC Contact</label>
    <nameField>
        <displayFormat>ECC-{0000}</displayFormat>
        <label>EC Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EC Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>